plugins {
    id 'java'
}

group = 'cz.coffee.sda'
version = '1.0-SNAPSHOT'

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(23))
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}